plugins {
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

// external configuration
apply from: "${rootDir}/gradle/dependencies.gradle"
apply from: "${rootDir}/gradle/test.gradle"
apply from: "${rootDir}/gradle/liquibase.gradle"

group = 'de.heinerion'
version = '1.0.0'
description = 'InvoiceManager'
java.sourceCompatibility = JavaVersion.VERSION_17

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named("bootJar") {
    mainClass = 'de.heinerion.App'
}
